# prodet

./: .gitignore
.github/workflows/: ci.yml
data/: russian-propaganda.cleaned.csv
data/files/: russian-propaganda.restructured.csv
data/scripts/: augment.py  cleanup.py  extract.py  translate.py
deployment/: docker-compose-elastic.yml  docker-compose-kafka.yml  docker-compose-pipeline.yml  docker-compose-spark.yml  run.cmd  run.sh
deployment/logstash/config/: logstash.yml  pipelines.yml
deployment/logstash/pipeline/: logstash.conf
deployment/spark/: Dockerfile  entrypoint.sh
notebooks/: propaganda-detection-model.ipynb  russian-propaganda-eda.ipynb  russian-propaganda-model.ipynb
src/processors/propaganda_detector/: .env.example  detector.py  main.py  normalizer.py  pyproject.toml  translator.py
src/processors/propaganda_detector/src/: config.py  detector.py  main.py  normalizer.py  schema.py  spark.py  translator.py
src/publishers/telegram_bot/: Dockerfile  example.env  fake.py  main.py  pyproject.toml
src/publishers/telegram_bot/src/: bot.py  config.py  kafka.py  main.py
